<resources>
    <string name="app_name">Action Management System</string>
    <string name="dialog_title_normal">Message</string>
    <string name="dialog_check_version_loading">App Version Checking...</string>
    <string name="internet_error">Internet Error</string>
    <string name="dialog_loading">Loading...</string>
    <string name="connection_err_412">Update Fail, Please sure the data exist.</string>
    <string name="connection_err_500">System ERROR. Please contact to system admin.</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="version">Ver.：%1$s</string>
    <string name="hint_account">Please input account</string>
    <string name="confirm">Confirm</string>
    <string name="login_fail">Login Fail</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sent">Sent</string>
    <string name="hint_password">Please input password</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="login_user">Login User：%1$s</string>
    <string name="must_input">Please key-in following fields：</string>
    <string name="real_date">Real Date</string>
    <string name="estimate_date">Estimate Date</string>
    <string name="event_action">Action</string>
</resources>
